# opendrive-mesh

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: main.cpp
src/export/: OBJExporter.cpp  OBJExporter.h  USDExporter.cpp  USDExporter.h
src/geometry/: LaneMesh.cpp  LaneMesh.h  Math.cpp  Math.h  RoadGeometry.cpp  RoadGeometry.h
src/mesh/: JunctionMesh.cpp  JunctionMesh.h  MeshGenerator.cpp  MeshGenerator.h  ObjectMesh.cpp  ObjectMesh.h  SignalMesh.cpp  SignalMesh.h
src/parser/: OpenDRIVEParser.cpp  OpenDRIVEParser.h  types.h
src/types/: MeshTypes.cpp  MeshTypes.h
tests/: test.cpp  test.h  test_main.cpp
